哲学家系列修改

--- a/_posts/2014-09-11-哲学家系列(译言).md
+++ b/_posts/2014-09-11-哲学家系列(译言).md
@@ -7,6 +7,7 @@ category: reading
 
 ###以下是来自[译言网](http://yeeyan.org)上的哲学家系列文章，让我们也了解下大师的世界。          
     
+#译言地址
 
 * [柏拉图](http://select.yeeyan.org/view/719/419410)
 * [斯多葛派](http://article.yeeyan.org/view/719/419425)
@@ -15,3 +16,16 @@ category: reading
 * [亚当•斯密](http://select.yeeyan.org/view/719/420956)
 * [黑格尔](http://select.yeeyan.org/view/719/421770)
 * [让-保罗·萨特](http://select.yeeyan.org/view/719/422707)
+
+
+
+<br />
+#英文地址  				
+
+* [柏拉图](http://thephilosophersmail.com/perspective/the-great-philosophers-1-plato/)
+* [斯多葛派](http://thephilosophersmail.com/virtues/the-great-philosophers-2-the-stoics/)
+* [伊壁鸠鲁](http://thephilosophersmail.com/virtues/the-great-philosophers-3-epicurus/)
+* [尼采](http://thephilosophersmail.com/virtues/the-great-philosophers-4-nietzsche/)
+* [亚当•斯密](http://thephilosophersmail.com/perspective/the-great-philosophers-5-adam-smith/)
+* [黑格尔](http://thephilosophersmail.com/virtues/the-great-philosophers-6-hegel/)
+* [让-保罗·萨特](http://thephilosophersmail.com/perspective/the-great-philosophers-7-jean-paul-sartre/)
