--- a/_posts/2014-11-18-Ruby编写领域专属语言(dsl).md
+++ b/_posts/2014-11-18-Ruby编写领域专属语言(dsl).md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 使用ruby来编写一门领域专属语言
-category: reading,programm
+category: programm
 ---
 
 #Writing a domain-Specific Language in Ruby(使用ruby来编写一门领域专属语言)
