develop your own css framework

--- a/_posts/2015-03-13-css预处理器.md
+++ b/_posts/2015-03-13-css预处理器.md
@@ -30,6 +30,8 @@ Sass是Ruby语言写的，但两者在语法上没有关系，只是在安装Sas
 * 注释/* */或//(/*!重要注释*/)有感叹号的注释压缩状态也会保留。
 * 选择器可以继承
 * Mixin，类似C语言中的宏，是可重用的代码，可带参数和缺省值。
+          
+
           //定义
           @mixin left($value: 10px){
           float:left;
@@ -39,19 +41,40 @@ Sass是Ruby语言写的，但两者在语法上没有关系，只是在安装Sas
           div{
            @include left(20px);
           }
+
 * 颜色函数
 * 插入文件:使用@import来插入外部文件(@import "path/filename.scss";)
 * 条件语句@if  @else
 * for,while,each循环("#{}"与ruby字符提取类似)　
+       
+
        @for $i from 1 to 10{
              .border-#{$i}{
 	      border:#{$i}px solid blue;
        }}
 
 * 自定义函数
-         @function double($n){
+         
+
+        @function double($n){
             @return $n*2;
          }
          #sidebar{
             width:double(5px);
          }
+
+
+##[Less语言特性](http://less.bootcss.com/features/)
+
+* 变量
+* Extend
+* Mixin
+* 带参数的Mixin
+* 作为函数使用的Mixin
+* Import Directives
+* Import Options
+* Mixin Guards
+* CSS Guards
+* 循环
+* 合并
+* 父选择符
