a simple css framework

--- a/_posts/2015-03-13-css预处理器.md
+++ b/_posts/2015-03-13-css预处理器.md
@@ -65,8 +65,9 @@ Sass是Ruby语言写的，但两者在语法上没有关系，只是在安装Sas
 
 
 ##[Less语言特性](http://less.bootcss.com/features/)
+Less是CSS的扩展，完全兼容CSS语法。
 
-* 变量
+* 变量(变量只能定义一次)
 * Extend
 * Mixin
 * 带参数的Mixin
