--- a/_posts/2014-11-18-Ruby编写领域专属语言(dsl).md
+++ b/_posts/2014-11-18-Ruby编写领域专属语言(dsl).md
@@ -2,6 +2,7 @@
 layout: post
 title: 使用ruby来编写一门领域专属语言
 category: programm
+tags: [dsl, ruby]
 ---
 
 #Writing a domain-Specific Language in Ruby(使用ruby来编写一门领域专属语言)
